# qwen-tts-serve

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
infra/: main.tf  outputs.tf  variables.tf
scripts/: demo.py  stream_demo.py  voice_clone_demo.py
src/qwen_tts_serve/: __init__.py  client.py  engine.py  server.py
tests/: test_client.py  test_engine.py  test_server.py
